added coach profiles to about page

--- a/about.html
+++ b/about.html
@@ -456,6 +456,79 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/Rich Hansen.jpg" alt="" />
+                        <h4>Dr. Rich Hanson</h4>
+                        <p class="text-muted">Leadership Coach</p>
+                        <p class="text-muted">
+                            I am the founder of the Leadership Coaching Network. After a 40-year
+                            career as a church pastor, missionary and theology professor at the
+                            Ethiopian Graduate School of Theology (EGST) in Addis Ababa, I now
+                            serve as a Leadership Coach and Consultant helping African Christian
+                            leaders, NGO’s, teams, and denominations gain deeper clarity about
+                            their challenges and opportunities, develop a God-given vision, and
+                            make significant progress toward achieving their goals.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/Wondwossen.jpg" alt="" />
+                        <h4>Wondwossen G. Teklemichael</h4>
+                        <p class="text-muted">Leadership Trainer<br /></p>
+                        <p class="text-muted">
+                            I am a multicultural and multilingual, certified international
+                            leadership professional. I have over twenty years of
+                            experience in culturally diverse environments. I have
+                            experience in strategic and operational leadership, in non
+                            for-profit, for-profit as well as government sectors.
+                            Additionally, I am an expert in international school
+                            administration. I work as a trainer in leadership (team building,
+                            organizational culture, emotional intelligence, strategic
+                            planning, feedback etc.). I also have experience in board
+                            governance, entrepreneurship, communications & public
+                            speaking. I hold certifications in International School
+                            Business Leadership and Management. I have received
+                            training in strategic leadership and other disciplines in
+                            various institutions, including Foreign Service Institute
+                            (USA), China Europe International Business School (CEIBS),
+                            Harvard Business School, Association of International
+                            Schools of Africa (Kenya) and Principals Training Center in
+                            the US.
+                            As a Mentor, I am motivated, result oriented, and a team
+                            builder with high ethical standards. I am on the Hay Group
+                            Inventory of Leadership Style, and I have received high
+                            ratings two years in a row, as a Visionary, Coaching,
+                            Affiliative and Participatory Leader.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/Ramzi.png" alt="" />
+                        <h4>Ramzi Abdurhaman</h4>
+                        <p class="text-muted">Soft Skills Trainer</p>
+                        <p class="text-muted">
+                            I am dedicated and passionate about education .... always ready
+                            to learn and develop professionally myself, and being a learning
+                            support for others. I have MA-TEFL from Addis Ababa University
+                            and MA-TESOL from Lancaster University, a leader in the field in
+                            the UK. I have over thirty years of experience in teaching,
+                            training and facilitation. I have been working as a facilitator
+                            for the British Council on a wide range of projects. Some
+                            prestigious highlights include: ‘CORE SKILLS’, ‘Critical
+                            Thinking and Problem Solving’, ‘Communication and
+                            Collaboration’, ‘Leadership and Personal Development’,
+                            ‘Instructional Leadership’, and ‘Building Team’ among others. My
+                            experience also extends into the region, for example, I have
+                            also delivered TOT training for Master Trainers in Nigeria and
+                            South Sudan.
+                        </p>
+                    </div>
+                </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/salome.png" alt="" />
@@ -501,29 +574,6 @@
                             the Vice President of the Lions Club Addis Ababa Greater and board member of Feseha Atlaw
                             Wolde Yohannes
                             Endowment.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/Ramzi.png" alt="" />
-                        <h4>Ramzi Abdurhaman</h4>
-                        <p class="text-muted">Soft Skills Trainer</p>
-                        <p class="text-muted">
-                            I am dedicated and passionate about education .... always ready
-                            to learn and develop professionally myself, and being a learning
-                            support for others. I have MA-TEFL from Addis Ababa University
-                            and MA-TESOL from Lancaster University, a leader in the field in
-                            the UK. I have over thirty years of experience in teaching,
-                            training and facilitation. I have been working as a facilitator
-                            for the British Council on a wide range of projects. Some
-                            prestigious highlights include: ‘CORE SKILLS’, ‘Critical
-                            Thinking and Problem Solving’, ‘Communication and
-                            Collaboration’, ‘Leadership and Personal Development’,
-                            ‘Instructional Leadership’, and ‘Building Team’ among others. My
-                            experience also extends into the region, for example, I have
-                            also delivered TOT training for Master Trainers in Nigeria and
-                            South Sudan.
                         </p>
                     </div>
                 </div>
