formatting change to intro text

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <h1>Welcome To Bridge Professional Development Centre</h1>
         </div>
         <div class="intro-heading text-uppercase"><br/>
-          Train, Coach, and, Empower!
+          Train, Coach, and Empower!
         </div>
 
         <!-- <div class="animate intro-lead-in" style="max-width: 91%;">Excellence in language education and communication</div> -->
