replaced public course schedule section with company profile

--- a/index.html
+++ b/index.html
@@ -516,18 +516,16 @@
           <p>Alternative text - include a link <a href="https://drive.google.com/file/d/13_AFxY_6uJEhYPbZuHYOBWg2A563fuy7/view?usp=sharing">to the PDF!</a></p>
         </object> -->
         <h4 class="service-heading">
-          Our Public Courses Schedule
+          Company Profile
         </h4>
         <span class="fa-stack fa-4x">
-          <!-- <a href="flyer/Public course schedule till June 2024.pdf"> -->
-          <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" />
-          <!-- </a> -->
-          <!-- <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" /> -->
+          <a href="flyer/Bridge PDC company profile.pdf">
+          <img class="img-fluid" src="flyer/company profile.jpg" alt="Brochure" />
+          </a>
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          Coming soon
-          <!-- <a href="flyer/Public course schedule till June 2024.pdf">
-            Click here </a>for our Our Public Courses Schedule -->
+          <a href="flyer/Bridge PDC company profile.pdf">
+            Click here </a>for our company profile
         </p>
         <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
             <p class="text-muted">
@@ -565,14 +563,14 @@
           Frequently asked questions
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/FAQs Final Nov 2022.pdf">
-            <img class="img-fluid" src="flyer/flyer.PNG" alt="">
-          </a>
+          <img class="img-fluid" src="flyer/flyer.PNG" alt="">
+          <!-- <a href="flyer/FAQs Final Nov 2022.pdf"></a> -->
         </span>
         <p class="text-muted" style="margin-top: 30px;">
           <!-- Coming soon -->
-          <a href="flyer/FAQs Final Nov 2022.pdf"> Click here </a>for
-          frequently asked questions
+          <!-- <a href="flyer/FAQs Final Nov 2022.pdf"> -->
+            <!-- Click here </a>for frequently asked questions -->
+             Coming soon!
         </p>
       </div>
     </div>
