updated staff profiles and about section

--- a/about.html
+++ b/about.html
@@ -219,17 +219,22 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">
                                         We, <br />
-                                        - provide the best training in soft skills and languages
-                                        for individuals, groups and organisations in Addis Ababa
-                                        <br />
-                                        - are located in a superb easily accessible area, and
-                                        provide professional learning facilities and resources.
-                                        <br />
-                                        - work with only the best professionals dedicated to
-                                        provide a world class learning and development
-                                        interventions.
-                                        <br />
-                                        - have a welcoming, warm atmosphere.
+                                        <ul class="text-muted">
+                                            <li><p>
+                                                provide the best training in soft skills and languages
+                                                for individuals, groups and organisations in Addis Ababa</p>
+                                            </li>
+                                            <li>
+                                                <p>are located in a superb easily accessible area, and
+                                                provide professional learning facilities and resources.
+                                            </li></p>
+                                            <li><p></p>
+                                                work with only the best professionals dedicated to
+                                                provide a world class learning and development
+                                                interventions.
+                                            </p></li>
+                                            <li><p>have a welcoming, warm atmosphere.</p></li>
+                                        </ul>
                                     </p>
                                 </div>
                             </div>
@@ -298,50 +303,33 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/LB Photo .jpg" alt="" />
-                        <h4>Liam Brown</h4>
+                        <img class="mx-auto rounded-circle" src="img/team/Wondwossen.jpg" alt="" />
+                        <h4>Wondwossen G. Teklemichael</h4>
+                        <p class="text-muted">Leadership Trainer<br /></p>
                         <p class="text-muted">
-                            Programme Advisor <br />
-                        </p>
-                        <p class="text-muted">
-                            I have been 'in' learning and development all my working life. <br /><br />
-
-                            I know this world as an experienced teacher, manager, trainer, speaker,
-                            writer and consultant working on achieving excellence at work – in
-                            communication, collaborative learning and decision making and
-                            people-friendly people management.<br /><br />
-
-
-                            I have worked extensively in Europe, Asia, The Middle East and UK. In a
-                            recent role I was responsible for designing and delivering Business
-                            Unit-wide service-focused learning initiatives and learning
-                            interventions for managers, teachers, specialist and support staff and
-                            liaising extensively with third party vendors to collaborate on talent
-                            development programmes.<br /><br />
-
-                            Based now in Portugal, I now work with individuals and institutions
-                            around the world who want to foster pride in achieving the highest
-                            quality and an enjoyment of collegiality and teamwork.<br /><br />
-
-                            As an invited keynote, plenary and conference speaker, I have extensive
-                            experience of over 50 ELT, KM, HR and specialist business and
-                            communication conferences around the world. My talks aim to be cutting
-                            edge and challenging, sometimes inspirational, but always grounded in
-                            real-world work contexts.<br /><br />
-
-
-                            Areas of expertise and interest:<br /><br />
-
-
-                            Managing communication, meetings and staff engagement – getting
-                            the people side of the business right<br />
-                            Developing new approaches to staff appraisal and performance
-                            assessment – once size certainly doesn't fit all<br />
-                            Building capacity and skills for best-in-class customer service
-                            – this is where you can really stand out from the crowd<br />
-                            Building learning and development opportunities for all staff
-                            including Away-days and 'bite-size' programmes. "Just in time, right
-                            time, right way and inclusive".<br />
+                            I am a multicultural and multilingual, certified international
+                            leadership professional. I have over twenty years of
+                            experience in culturally diverse environments. I have
+                            experience in strategic and operational leadership, in non
+                            for-profit, for-profit as well as government sectors.
+                            Additionally, I am an expert in international school
+                            administration. I work as a trainer in leadership (team building,
+                            organizational culture, emotional intelligence, strategic
+                            planning, feedback etc.). I also have experience in board
+                            governance, entrepreneurship, communications & public
+                            speaking. I hold certifications in International School
+                            Business Leadership and Management. I have received
+                            training in strategic leadership and other disciplines in
+                            various institutions, including Foreign Service Institute
+                            (USA), China Europe International Business School (CEIBS),
+                            Harvard Business School, Association of International
+                            Schools of Africa (Kenya) and Principals Training Center in
+                            the US.
+                            As a Mentor, I am motivated, result oriented, and a team
+                            builder with high ethical standards. I am on the Hay Group
+                            Inventory of Leadership Style, and I have received high
+                            ratings two years in a row, as a Visionary, Coaching,
+                            Affiliative and Participatory Leader.
                         </p>
                     </div>
                 </div>
@@ -391,7 +379,7 @@
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/biftu.jpg" alt="" />
                         <h4>Biftu Solomon</h4>
-                        <p class="text-muted">Social Media Manager</p>
+                        <p class="text-muted">Technology Lead</p>
                         <p class="text-muted">
                             My name is Biftu Solomon.
                             I am a graduate of Addis Ababa Science and Technology
@@ -402,55 +390,6 @@
                             content for our newsletters, flyers and posters
                             I also co-facilitate training which I enjoy very much and look
                             forward to every opportunity
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="" />
-                        <h4>Lynne Upton</h4>
-                        <p class="text-muted">Online Trainer</p>
-                        <p class="text-muted">
-                            Based in London, Lynne has taught English online to students in
-                            London, Ethiopia, Brazil and Turkey and has studied a Teaching
-                            English course by Global English. She has a degree in English
-                            Language from Durham University. She used to work in
-                            Communications before having her three children.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="" />
-                        <h4>Rob Rawlins</h4>
-                        <p class="text-muted">Online Trainer</p>
-                        <p class="text-muted">
-                            After working for the church, Rob changed career to English
-                            language teaching. He taught in London colleges and started his
-                            own school. He retired in 2014 and came to Addis with his wife
-                            to start Bridge, this school. He is so pleased to see it
-                            continue under Abay's leadership. He likes helping from London
-                            by zoom teaching. He also zoom teaches to Brazil and Turkey. He
-                            was born in Zambia and lived his first 16 years there.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/6n.jpg" alt="" />
-                        <h4>Ruth Derrick</h4>
-                        <p class="text-muted">Online Trainer</p>
-                        <p class="text-muted">
-                            Ruth Derrick is the Associate Director of Global Partners for
-                            Education. She has a Master’s Degree in English. She has taught
-                            a variety of courses at the university level, has taught classes
-                            in Asia and Africa, as well as online courses to both children
-                            and college students. She sees education as a path to opening
-                            doors for students of all ages, and she desires to help others
-                            achieve their professional educational goals.
                         </p>
                     </div>
                 </div>
@@ -474,33 +413,19 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/Wondwossen.jpg" alt="" />
-                        <h4>Wondwossen G. Teklemichael</h4>
-                        <p class="text-muted">Leadership Trainer<br /></p>
+                        <img class="mx-auto rounded-circle" src="img/team/Manfred.png" alt="" />
+                        <h4>Manfred Molomo</h4>
+                        <p class="text-muted">Leadership Coach<br /></p>
                         <p class="text-muted">
-                            I am a multicultural and multilingual, certified international
-                            leadership professional. I have over twenty years of
-                            experience in culturally diverse environments. I have
-                            experience in strategic and operational leadership, in non
-                            for-profit, for-profit as well as government sectors.
-                            Additionally, I am an expert in international school
-                            administration. I work as a trainer in leadership (team building,
-                            organizational culture, emotional intelligence, strategic
-                            planning, feedback etc.). I also have experience in board
-                            governance, entrepreneurship, communications & public
-                            speaking. I hold certifications in International School
-                            Business Leadership and Management. I have received
-                            training in strategic leadership and other disciplines in
-                            various institutions, including Foreign Service Institute
-                            (USA), China Europe International Business School (CEIBS),
-                            Harvard Business School, Association of International
-                            Schools of Africa (Kenya) and Principals Training Center in
-                            the US.
-                            As a Mentor, I am motivated, result oriented, and a team
-                            builder with high ethical standards. I am on the Hay Group
-                            Inventory of Leadership Style, and I have received high
-                            ratings two years in a row, as a Visionary, Coaching,
-                            Affiliative and Participatory Leader.
+                            I am a certified Life and Leadership Coach and a member of
+                            International Coaching Federation (ICF) with over a decade
+                            experience helping individuals and teams achieve their goals. I'm
+                            passionate about empowering my clients to unlock their
+                            potential and achieve meaningful resultsin both their personal
+                            and professional lives. I help my clients gain clarity, set realistic
+                            goals, and develop actionable plans to overcome obstacles and
+                            achieve success. My primary area of expertise is integrating life,
+                            leadership and business issues in my coaching approach.
                         </p>
                     </div>
                 </div>
@@ -599,6 +524,54 @@
                             well to work now with an ever-increasing range of up-to-date
                             workplace skills for all levels of local and international
                             professional, commercial and public service organisations.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="" />
+                        <h4>Lynne Upton</h4>
+                        <p class="text-muted">Online Trainer</p>
+                        <p class="text-muted">
+                            Based in London, Lynne has taught English online to students in
+                            London, Ethiopia, Brazil and Turkey and has studied a Teaching
+                            English course by Global English. She has a degree in English
+                            Language from Durham University. She used to work in
+                            Communications before having her three children.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="" />
+                        <h4>Rob Rawlins</h4>
+                        <p class="text-muted">Online Trainer</p>
+                        <p class="text-muted">
+                            After working for the church, Rob changed career to English
+                            language teaching. He taught in London colleges and started his
+                            own school. He retired in 2014 and came to Addis with his wife
+                            to start Bridge, this school. He is so pleased to see it
+                            continue under Abay's leadership. He likes helping from London
+                            by zoom teaching. He also zoom teaches to Brazil and Turkey. He
+                            was born in Zambia and lived his first 16 years there.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/6n.jpg" alt="" />
+                        <h4>Ruth Derrick</h4>
+                        <p class="text-muted">Online Trainer</p>
+                        <p class="text-muted">
+                            Ruth Derrick is the Associate Director of Global Partners for
+                            Education. She has a Master’s Degree in English. She has taught
+                            a variety of courses at the university level, has taught classes
+                            in Asia and Africa, as well as online courses to both children
+                            and college students. She sees education as a path to opening
+                            doors for students of all ages, and she desires to help others
+                            achieve their professional educational goals.
                         </p>
                     </div>
                 </div>
