added partners section in home page

--- a/about.html
+++ b/about.html
@@ -60,6 +60,7 @@
                                     <a class="js-scroll-trigger" href="index.html#services">Programs</a>
                                     <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
                                     <a class="js-scroll-trigger" href="index.html#client">Clients</a>
+                                    <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                                     <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
                                 </div>
                             </div>
@@ -68,6 +69,7 @@
                             <a class="js-scroll-trigger" href="index.html#services">Programs</a>
                             <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
                             <a class="js-scroll-trigger" href="index.html#client">Clients</a>
+                            <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                             <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
                         </div>
                     </li>
