--- a/blog.html
+++ b/blog.html
@@ -74,6 +74,7 @@
                                     <a class="js-scroll-trigger" href="index.html#services">Programs</a>
                                     <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
                                     <a class="js-scroll-trigger" href="index.html#client">Clients</a>
+                                    <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                                     <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
                                 </div>
                             </div>
@@ -82,6 +83,7 @@
                             <a class="js-scroll-trigger" href="index.html#services">Programs</a>
                             <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
                             <a class="js-scroll-trigger" href="index.html#client">Clients</a>
+                            <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                             <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
                         </div>
                     </li>
