--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                   <a class="js-scroll-trigger" href="#services">Programs</a>
                   <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
                   <a class="js-scroll-trigger" href="#client">Clients</a>
+                  <a class="js-scroll-trigger" href="#partner">Partners</a>
                   <a class="js-scroll-trigger" href="#testimonials">Testimonials</a>
                 </div>
               </div>
@@ -200,6 +201,7 @@
               <a class="js-scroll-trigger" href="#services">Programs</a>
               <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
               <a class="js-scroll-trigger" href="#client">Clients</a>
+              <a class="js-scroll-trigger" href="#partner">Partners</a>
               <a class="js-scroll-trigger" href="#testimonials">Testimonials</a>
             </div>
           </li>
@@ -1054,7 +1056,7 @@
     </div>
   </section>
 
-  <!-- client -->
+  <!-- clients -->
   <section class="page-section" id="client">
     <div id="clients" class="section-bg">
       <div class="container">
@@ -1115,16 +1117,10 @@
                 <img src="img/clients/bethany-christian-services.jpg" class="img-fluid client_item_lg" />
               </li>
               <li>
-                <img src="img/clients/nexgens.png" class="img-fluid client_item" />
-              </li>
-              <li>
                 <img src="img/clients/Excellerent.png" class="img-fluid client_item_lg" />
               </li>
               <li>
                 <img src="img/clients/lersha.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/Dejen.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/Gallani Coffee.png" class="img-fluid client_item" />
@@ -1171,6 +1167,43 @@
       </div>
     </div>
   </section>
+
+    <!-- partners -->
+    <section class="page-section" id="partner">
+      <div id="partners" class="section-bg">
+        <div class="container">
+          <div class="section-header text-center">
+            <h2 class="section-heading text-uppercase">Our Partners</h2>
+            <h3 class="section-subheading text-muted">
+              Meet organisations we work with
+            </h3>
+          </div>
+          <div class="row justify-content-center body mb-4">
+            <ul class="col-lg-11 justify-content-center">
+              <li>
+                <img class="img-fluid partner1" src='img/partners/CCO.png' alt=''>
+              </li>
+              <li>
+                <img class="img-fluid partner2" src='img/partners/GSL.png' alt=''>
+              </li>
+              <li>
+                <img class="img-fluid partner3" src='img/partners/GPE.png' alt=''>
+              </li>
+              <li>
+                <img class="img-fluid partner4" src='img/partners/Ye-Ethiopia-Lijoch-TV.jpg' alt=''>
+              </li>
+              <li>
+                <img class="img-fluid partner5" src='img/partners/LCN.jpg' alt=''>
+              </li>
+              <li>
+                <img class="img-fluid partner6" src='img/partners/elmwood logo.png' alt=''>
+              </li>
+          
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- Testimonials -->
   <section class="page-section" id="testimonials">
