--- a/gallery.html
+++ b/gallery.html
@@ -62,6 +62,7 @@
                                     <a class="js-scroll-trigger" href="index.html#services">Programs</a>
                                     <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
                                     <a class="js-scroll-trigger" href="index.html#client">Clients</a>
+                                    <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                                     <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
                                 </div>
                             </div>
@@ -70,6 +71,7 @@
                             <a class="js-scroll-trigger" href="index.html#services">Programs</a>
                             <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
                             <a class="js-scroll-trigger" href="index.html#client">Clients</a>
+                            <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                             <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
                         </div>
                     </li>
