added update on LCN coaching course

--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
       </div>
     </div>
     <div class="row ms-auto">
-      <div class="col-lg-4 col-md-10 ml-5">
-        <img src='flyer/sl_web.png' alt='presentation' width="400px">
+      <div class="col-lg-4 col-md-10" style="margin-top: 64px;">
+        <img src='flyer/sl_web.png' alt='presentation' width="90%">
       </div>
       <div class="col-lg-7 col-md-10 mt-4 ">
         <h2>2<sup>nd</sup> Annual Workshop For School Leaders </h2>
@@ -291,8 +291,37 @@
         <p>Call us <a href="#contact">now </a>for registration!</p>
       </div>
     </div>
+    <div class="row"><hr class="col-lg-10" style="width: 60%;"></div>
+    <div class="row ms-auto">
+      <div class="col-lg-4 col-md-10 ml-5" style="margin-top: 72px;">
+        <a href="https://www.leadercoachingnet.com/"><img src='img/partners/LCN.jpg' alt='presentation' width="90%"></a>
+      </div>
+      <div class="col-lg-7 col-md-10 mt-4 ">
+        <h2> Fall 2024 Basic Coaching Course </h2>
+        <!-- <h5 class="text-muted">Values based education</h5> -->
+        <p> <a href="https://www.leadercoachingnet.com/">Leadership Coaching Network</a>'s fall 2024 basic coaching course
+          is
+          launching on October 24. It will be a 21 hour course with 3 hours of virtual sessions every thursday starting
+          October
+          24 and continuing for 4 weeks. The course will also have 9 hours of fieldwork / practice. The fee for
+          this
+          course is only 30$ and can be paid in Ethiopian birr.</p>
+        </p>
+        <strong>By attending this course you will:</strong><br />
+        </p>
+        <ul style="list-style-type:disc;">
+          <li>Become a more influential leader</li>
+          <li>Increase your capacity to empower others in your family and workplace</li>
+          <li>Master basic skills of active listening and powerful questions</li>
+          <li>Pursue a world-class coaching credential</li>
+        </ul>
+        <p>Visit <a href="https://mailchi.mp/770eb47657d4/coaching-for-transformation-course">Coaching for
+            Transformation</a> for more information about the course.</p>
+        <p>Click<a href="https://forms.gle/Y3oyFh8fg1M5PQGb6"> here </a>to sign up.</p>
+      </div>
     </div>
-  </section>
+    </div>
+    </section>
 
   <section class="page-section" id="services">
     <div class="row">
