--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
       </div>
     </div>
     <div class="row ms-auto">
-      <div class="col-lg-4 col-md-10" style="margin-top: 64px;">
-        <img src='flyer/sl_web.png' alt='presentation' width="90%">
+      <div class="col-lg-4 col-md-10 ml-5" style="margin-top: 64px;">
+        <img src='flyer/sl_web.png' alt='School leaders workshop' width="90%">
       </div>
       <div class="col-lg-7 col-md-10 mt-4 ">
         <h2>2<sup>nd</sup> Annual Workshop For School Leaders </h2>
@@ -294,7 +294,7 @@
     <div class="row"><hr class="col-lg-10" style="width: 60%;"></div>
     <div class="row ms-auto">
       <div class="col-lg-4 col-md-10 ml-5" style="margin-top: 72px;">
-        <a href="https://www.leadercoachingnet.com/"><img src='img/partners/LCN.jpg' alt='presentation' width="90%"></a>
+        <a href="https://www.leadercoachingnet.com/"><img src='img/partners/LCN.jpg' alt='LCN logo' width="90%"></a>
       </div>
       <div class="col-lg-7 col-md-10 mt-4 ">
         <h2> Fall 2024 Basic Coaching Course </h2>
